Rimosso dipendenza parse

--- a/plugin.xml
+++ b/plugin.xml
@@ -43,7 +43,7 @@
          <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
       </config-file>
 
-      <framework src="com.parse:parse-android:1.13.0" />
+      <!--framework src="com.parse:parse-android:1.13.0" /-->
       <framework src="com.parse.bolts:bolts-android:1.4.0" />
       <framework src="com.android.support:support-v4:+" />
 
