--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<plugin xmlns="http://www.apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="parse-push-plugin" version="1.0.6">
+<plugin xmlns="http://www.apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="parse-push-plugin" version="1.0.7">
    <name>ParsePushPlugin</name>
    <description>Parse.Push plugin for phonegap/cordova/ionic framework</description>
 	<keywords>cordova,phonegap,ionic framework, parse server, parse push, push notification</keywords>
@@ -43,9 +43,9 @@
          <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
       </config-file>
 
-      <framework src="com.parse:parse-android:1.13.1" />
-      <framework src="com.parse.bolts:bolts-android:1.4.0" />
+      <framework src="com.parse:parse-android:1.15.7" />
       <framework src="com.android.support:support-v4:+" />
+      <framework src="me.leolin:ShortcutBadger:1.1.17@aar" />
 
       <source-file src="src/android/ParsePushPlugin.java" target-dir="src/github/taivo/parsepushplugin" />
       <source-file src="src/android/ParsePushPluginReceiver.java" target-dir="src/github/taivo/parsepushplugin" />
@@ -65,6 +65,12 @@
             <param name="ios-package" value="ParsePushPlugin" />
             <param name="onload" value="true" />
          </feature>
+      </config-file>
+      <config-file target="*-Debug.plist" parent="aps-environment">
+      	<string>development</string>
+      </config-file>
+      <config-file target="*-Release.plist" parent="aps-environment">
+      	<string>production</string>
       </config-file>
       <header-file src="src/ios/ParsePushPlugin.h" />
       <source-file src="src/ios/ParsePushPlugin.m" />
